Archive2/51/db653afdab25e3/output
main.cpp:16:5: error: missing 'typename' prior to dependent type name 'B<decltype(f(0))>::Type'
    B<decltype(f(0))>::Type m1; // typename required
    ^~~~~~~~~~~~~~~~~~~~~~~
    typename 
1 error generated.
main.cpp:16:5: error: need 'typename' before 'B<decltype (f(0))>::Type' because 'B<decltype (f(0))>' is a dependent scope
     B<decltype(f(0))>::Type m1; // typename required
     ^
g++ (GCC) 4.9.2
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
